added Github, Linkdin and project links

--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>T.J. Kennedy Jr. &mdash; Contact Me</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<!--<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
 	/>
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="author" content="FreeHTML5.co" />-->
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -81,12 +81,12 @@
 							<li>
 								<a href="index.html">Home</a>
 							</li>
-							<!--<li>
-								<a href="services.html">Services</a>
+							<li>
+								<a href="https://github.com/darkzero-omega2003">Github</a>
 							</li>
 							<li>
-								<a href="pricing.html">Pricing</a>
-							</li>-->
+								<a href="https://linkedin.com/in/terrance-j-kennedy-jr-382244141/">Linkdin</a>
+							</li>
 							<li>
 								<a href="about.html">About</a>
 							</li>
@@ -106,7 +106,7 @@
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
 				<ul class="slides">
-					<li style="background-image: url(images/pexels_photo_1.jpg);">
+					<li style="background-image: url(images/pexels_photo_5.jpg);">
 						<div class="overlay-gradient"></div>
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -125,8 +125,8 @@
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 col-md-push-2 animate-box">
 						<h2>Contact Details</h2>
-						<p>If you want or need to get in contact with me, questions, concerns or anything in between just send me an email or a phone
-							call and I'll get back to you as soon as I can!</p>
+						<p>If you want or need to get in contact with me, questions, concerns or anything in between just send me an email or
+							a phone call and I'll get back to you as soon as I can!</p>
 						<br>
 						<br>
 
