--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 					</h1>
 					<nav role="navigation">
 						<ul>
-							<!--<li>
-								<a href="work.html">Work</a>
-							</li>-->
-							<!--<li>
-								<a href="services.html">Services</a>
-							</li>-->
+							<li>
+								<a href="https://github.com/darkzero-omega2003">Github</a>
+							</li>
+							<li>
+								<a href="https://linkedin.com/in/terrance-j-kennedy-jr-382244141/">Linkdin</a>
+							</li>
 							<!--<li>
 								<a href="pricing.html">Pricing</a>
 							</li>-->
