--- a/about.html
+++ b/about.html
@@ -81,9 +81,12 @@
 							<li>
 								<a href="index.html">Home</a>
 							</li>
-							<!--<li><a href="services.html">Services</a></li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li class="active"><a href="about.html">About</a></li>-->
+							<li>
+								<a href="https://github.com/darkzero-omega2003">Github</a>
+							</li>
+							<li>
+								<a href="https://linkedin.com/in/terrance-j-kennedy-jr-382244141/">Linkdin</a>
+							</li>
 							<li>
 								<a href="contact.html">Contact</a>
 							</li>
