updated about page, projects and some pictures

--- a/contact.html
+++ b/contact.html
@@ -11,24 +11,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>T.J. Kennedy Jr. &mdash; Contact Me</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
-	/>
-	<meta name="author" content="FreeHTML5.co" />-->
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -138,6 +120,7 @@
 							<li>
 								<i class="icon-phone"></i>1 + 216 219 7428</li>
 							<li>
+							<!--make email useable-->	
 								<i class="icon-envelope"></i>
 								<a href="#">terrancejkennedyjr@yahoo.com</a>
 							</li>
@@ -199,24 +182,24 @@
 							<a href="#">Branding &amp; Identity</a>
 						</li>
 						<li>
-							<a href="#">Free HTML5</a>
+							<a href="#"></a>
 						</li>
 						<li>
-							<a href="#">HandCrafted Templates</a>
+							<a href="#"></a>
 						</li>
 					</ul>
 					<ul class="float">
 						<li>
-							<a href="#">Free Bootstrap Template</a>
+							<a href="#"></a>
 						</li>
 						<li>
-							<a href="#">Free HTML5 Template</a>
+							<a href="#"></a>
 						</li>
 						<li>
-							<a href="#">Free HTML5 &amp; CSS3 Template</a>
+							<a href="#"></a>
 						</li>
 						<li>
-							<a href="#">HandCrafted Templates</a>
+							<a href="#"></a>
 						</li>
 					</ul>-->
 
@@ -250,15 +233,8 @@
 
 
 				<div class="col-md-12 fh5co-copyright text-center">
-					<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.
-						<!--<span>Designed with
-							<i class="icon-heart"></i> by
-							<a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images by
-							<a href="http://unsplash.com/" target="_blank">Unsplash</a>
-						</span>-->
-					</p>
+					<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.</p>
 				</div>
-
 			</div>
 		</footer>
 	</div>
