--- a/about.html
+++ b/about.html
@@ -11,24 +11,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>T.J. Kennedy Jr &mdash; About</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+	<!--<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
 	/>
-	<meta name="author" content="FreeHTML5.co" />
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	<meta name="author" content="FreeHTML5.co" />-->
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -101,7 +87,7 @@
 		<aside id="fh5co-hero" class="js-fullheight">
 			<div class="flexslider js-fullheight">
 				<ul class="slides">
-					<li style="background-image: url(images/barbizon_grad.jpg);">
+					<li style="background-image: url(images/b_and_t_certificate1.jpg);">
 						<div class="overlay-gradient"></div>
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
@@ -115,31 +101,28 @@
 			</div>
 		</aside>
 
-		<!--<div class="fh5co-about animate-box">
+		<div class="fh5co-about animate-box">
 			<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
 				<h2>Company History</h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-					Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-					Separated they live in Bookmarksgrove. </p>
+				<p> We are a fledgling company </p>
+				
 			</div>
 			<div class="container">
 				<div class="col-md-12 animate-box">
 					<figure>
-						<img src="images/about-img.jpg" alt="Free HTML5 Template" class="img-responsive">
+						<img src="images/brand_dust_tj.jpg" alt="" class="img-responsive">
 					</figure>
 				</div>
-				<div class="col-md-8 col-md-push-4 animate-box">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
+					
 					<h2>A Startup Company</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-						Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-						Separated they live in Bookmarksgrove. Far far away, behind the word mountains, far from the countries Vokalia and
-						Consonantia, there live the blind texts. Far far away, behind the word mountains, far from the countries Vokalia and
-						Consonantia, there live the blind texts. Separated they live in Bookmarksgrove.</p>-->
+					<p></p>
 					<!--<p>
 						<a href="#" class="btn btn-primary btn-outline with-arrow">Learn more
 							<i class="icon-arrow-right"></i>
 						</a>
 					</p>-->
+					</div>
 
 				</div>
 			</div>
@@ -181,12 +164,12 @@
 						<img src="images/brandon_profile_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Brandon Triplett</h3>
 						<h4>Co-Founder, CTO</h4>
-						<p>Hello, my name is Brandon Triplett. And I am an aspiring web developer who wants to make things. Beautiful things.
-							Great things. I started doing a bit of coding in my teens without even knowing what I was doing. Building and tinkering
-							with small websites hosted on Angelfire and Geocities ages ago. And then, years later when MySpace was big, I even
-							found myself applying html to my own profile. At that time I had more of an idea of what I was doing. And fast foward
-							to today, and my knowledge is 20x more than what I knew back then. In all, I've been doing this on and off for over
-							15 years and am finally ready to make a career out of it!</p>
+						<p>Hello, my name is Brandon Triplett. I am an aspiring web developer who wants to make things. Beautiful things. Great
+							things. I started doing a bit of coding in my teens without even knowing what I was doing. Building and tinkering
+							with small websites hosted on Angelfire and Geocities ages ago. Then, years later when MySpace was big, I even found
+							myself applying html to my own profile. At that time I had more of an idea of what I was doing. And fast foward to
+							today, and my knowledge is 20x more than what I knew back then. In all, I've been doing this on and off for over 15
+							years and am finally ready to make a career out of it!</p>
 						<ul class="fh5co-social">
 							<!--<li><a href="#"><i class="icon-google"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
@@ -204,7 +187,7 @@
 						</ul>
 					</div>
 					<!--<div class="col-md-4 fh5co-staff text-center animate-box">
-						<img src="images/person3.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+						<img src="images/person3.jpg" alt="" class="img-responsive">
 						<h3>Yanna Kuzuki</h3>
 						<h4>Co-Founder, Principal</h4>
 						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
@@ -282,10 +265,10 @@
 		<div class="container">
 			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>About Us</h3>
-				<p>Hello, I'm T.J. Kennedy Jr. I along with my brother Brandon Triplett are new full stack coders from Cleveland Ohio.
-						We are currently attending the Case Western Reserve coding bootcamp and are hoping to make some great appas and other
-						creative things for you!!
-					</p>
+				<p>Hello, I'm T.J. Kennedy Jr. I along with my brother Brandon Triplett are new full stack coders from Cleveland Ohio. We
+					are graduates of the Case Western Reserve coding bootcamp and are hoping to make some great apps, websites and other creative
+					things for you!!
+				</p>
 				<p>
 					<!--<a href="#" class="btn btn-primary btn-outline with-arrow btn-sm">Join Us
 						<i class="icon-arrow-right"></i>
@@ -298,63 +281,44 @@
 					<li>
 						<a href="#">Web Design</a>
 					</li>
-					<!--<li>
-						<a href="#">Branding &amp; Identity</a>
-					</li>
-					<li>
-						<a href="#">Free HTML5</a>
-					</li>
-					<li>
-						<a href="#">HandCrafted Templates</a>
-					</li>-->
 				</ul>
 				<ul class="float">
-					<!--<li><a href="#">Free Bootstrap Template</a></li>
-					<li><a href="#">Free HTML5 Template</a></li>
-					<li><a href="#">Free HTML5 &amp; CSS3 Template</a></li>
-					<li><a href="#">HandCrafted Templates</a></li>
-				</ul>-->
+
 
 			</div>
 
-				<div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-					<h3>Follow Us</h3>
-					<ul class="fh5co-social">
-						<li>
-							<a href="https://twitter.com/TJKennedyJr">
-								<i class="icon-twitter"></i>
-							</a>
-						</li>
-						<li>
-							<a href="https://facebook.com/TJKennedyJrWebDesign">
-								<i class="icon-facebook"></i>
-							</a>
-						</li>
-						<!--<li>
+			<div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+				<h3>Follow Us</h3>
+				<ul class="fh5co-social">
+					<li>
+						<a href="https://twitter.com/TJKennedyJr">
+							<i class="icon-twitter"></i>
+						</a>
+					</li>
+					<li>
+						<a href="https://facebook.com/TJKennedyJrWebDesign">
+							<i class="icon-facebook"></i>
+						</a>
+					</li>
+					<!--<li>
 							<a href="#">
 								<i class="icon-google-plus"></i>
 							</a>
 						</li>-->
-						<!--<li>
+					<!--<li>
 							<a href="#">
 								<i class="icon-instagram"></i>
 							</a>
 						</li>-->
-					</ul>
-				</div>
-
-
-				<div class="col-md-12 fh5co-copyright text-center">
-					<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.
-						<!--<span>Designed with
-							<i class="icon-heart"></i> by
-							<a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images by
-							<a href="http://unsplash.com/" target="_blank">Unsplash</a>
-						</span>
-					</p>-->
-				</div>
-
+				</ul>
 			</div>
+
+
+			<div class="col-md-12 fh5co-copyright text-center">
+				<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.
+			</div>
+
+		</div>
 	</footer>
 	</div>
 
