--- a/index.html
+++ b/index.html
@@ -16,19 +16,6 @@
 	/>
 	<meta name="author" content="FreeHTML5.co" />
 
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -77,7 +64,7 @@
 			<div class="container">
 				<div class="header-inner">
 					<h1>
-						<a href="index.html">T.J Kennedy Jr</a>
+						<a href="index.html">T.J. Kennedy Jr</a>
 					</h1>
 					<nav role="navigation">
 						<ul>
@@ -149,7 +136,7 @@
 						</div>
 					</li>-->
 				</ul>
-			</div>
+				</div>
 		</aside>
 		<!--<div id="fh5co-services-section">
 			<div class="container">
@@ -229,7 +216,7 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center fh5co-heading animate-box">
 						<h2>Latest Projects</h2>
-						<p>All new projects will be posted here. 
+						<p>All new projects will be posted here.
 						</p>
 					</div>
 				</div>
@@ -290,17 +277,17 @@
 							</div>
 						</a>
 					</div>
-					<!--<div class="col-md-4 animate-box">
-						<a href="#" class="item-grid text-center">
-							<div class="image" style="background-image: url(images/image_6.jpg)"></div>
+					<div class="col-md-4 animate-box">
+						<a href="https://darkzero-omega2003.github.io/memoryREACTion" class="item-grid text-center">
+							<div class="image" style="background-image: url(images/sfWallpaper.jpg)"></div>
 							<div class="v-align">
 								<div class="v-align-middle">
-									<h3 class="title">Geographical App</h3>
-									<h5 class="category">Web Application</h5>
+									<h3 class="title">Street Fighter Memory Game </h3>
+									<h5 class="category">Game</h5>
 								</div>
 							</div>
 						</a>
-					</div>-->
+					</div>
 					<div class="col-md-12 text-center animate-box">
 						<p>
 							<a href="#" class="btn btn-primary with-arrow">View More Projects
@@ -517,8 +504,9 @@
 				<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 					<h3>About Us</h3>
 					<p>Hello, I'm T.J. Kennedy Jr. I along with my brother Brandon Triplett are new full stack coders from Cleveland Ohio.
-						We are currently attending the Case Western Reserve coding bootcamp and are hoping to make some great appas and other
-						creative things for you!!
+					   We are graduates of the Case Western Reserve coding bootcamp and are hoping to make some great apps, websites and other
+					   creative things for you!!
+					</p>
 					</p>
 					<!--<p>
 						<a href="#" class="btn btn-primary btn-outline with-arrow btn-sm">Join Us
@@ -598,24 +586,24 @@
 
 			</div>
 		</footer>
-	</div>
+		</div>
 
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Owl Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
+		<!-- jQuery -->
+		<script src="js/jquery.min.js"></script>
+		<!-- jQuery Easing -->
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Waypoints -->
+		<script src="js/jquery.waypoints.min.js"></script>
+		<!-- Owl Carousel -->
+		<script src="js/owl.carousel.min.js"></script>
+		<!-- Flexslider -->
+		<script src="js/jquery.flexslider-min.js"></script>
 
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
+		<!-- MAIN JS -->
+		<script src="js/main.js"></script>
 
 </body>
 
