updated site name  added dzo logo and updated some of portfolio. some need pics that match

--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 						</a>
 					</div>
 					<div class="col-md-4 animate-box">
-						<a href="https://viddyu.github.io/The-guild" class="item-grid text-center">
-							<div class="image" style="background-image: url(images/Guild-logo-02_.jpg)"></div>
+						<a href="http://poohcountychildcarecenter.com" class="item-grid text-center">
+							<div class="image" style="background-image: url(images/poohcounty.jpg)"></div>
 							<div class="v-align">
 								<div class="v-align-middle">
-									<h3 class="title">The Guild</h3>
-									<h5 class="category">Master and Apprentice App</h5>
+									<h3 class="title">Pooh County Child Care</h3>
+									<h5 class="category">Web Site</h5>
 								</div>
 							</div>
 						</a>
@@ -256,12 +256,12 @@
 						</a>
 					</div>
 					<div class="col-md-4 animate-box">
-						<a href="https://darkzero-omega2003.github.io/week-4-game" class="item-grid text-center">
-							<div class="image" style="background-image: url(images/thanos_bg.jpg)"></div>
+						<a href="https://darkzero-omega2003.github.io/longladderinc/" class="item-grid text-center">
+							<div class="image" style="background-image: url(images/PPL_logoj.jpg)"></div>
 							<div class="v-align">
 								<div class="v-align-middle">
-									<h3 class="title">Infinity Gems Crystal Counter</h3>
-									<h5 class="category">Game</h5>
+									<h3 class="title">Powerful Long Ladder Ensemble</h3>
+									<h5 class="category">Web Site</h5>
 								</div>
 							</div>
 						</a>
@@ -483,7 +483,7 @@
 			</div>
 		</div>
 
-		<!--<div class="fh5co-cta" style="background-image: url(images/slide_2.jpg);">
+		<div class="fh5co-cta" style="background-image: url(images/slide_2.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="col-md-12 text-center animate-box">
@@ -575,7 +575,8 @@
 
 
 				<div class="col-md-12 fh5co-copyright text-center">
-					<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.
+					<p>&copy; DarkZero_Omega Coding <img src="images/darkzero_omega_logo_v1.png" class="dzo_logo"
+						alt="darkzero_omega coding logo">
 						<!--<span>Designed with
 							<i class="icon-heart"></i> by
 							<a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images by
