--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 			<div class="container">
 				<div class="header-inner">
 					<h1>
-						<a href="index.html">T.J. Kennedy Jr</a>
+						<a href="index.html">DarkZero Omega Coding</a>
 					</h1>
 					<nav role="navigation">
 						<ul>
@@ -291,7 +291,7 @@
 				<h3>Follow Us</h3>
 				<ul class="fh5co-social">
 					<li>
-						<a href="https://twitter.com/TJKennedyJr">
+						<a href="https://twitter.com/DarkZeroCoding">
 							<i class="icon-twitter"></i>
 						</a>
 					</li>
@@ -315,7 +315,8 @@
 
 
 			<div class="col-md-12 fh5co-copyright text-center">
-				<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.
+				<p>&copy; DarkZero_Omega Coding <img src="images/darkzero_omega_logo_v1.png" class="dzo_logo"
+					alt="darkzero_omega coding logo">
 			</div>
 
 		</div>
