updated portfolio and games

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>T.J. Kennedy Jr. &mdash; Contact Me</title>
+	<title>DarkZero Omega Coding &mdash; Contact Me</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Facebook and Twitter integration -->
@@ -56,7 +56,7 @@
 			<div class="container">
 				<div class="header-inner">
 					<h1>
-						<a href="index.html">T.J. Kennedy Jr</a>
+						<a href="index.html">DarkZero Omega Coding</a>
 					</h1>
 					<nav role="navigation">
 						<ul>
@@ -122,7 +122,7 @@
 							<li>
 							<!--make email useable-->	
 								<i class="icon-envelope"></i>
-								<a href="#">terrancejkennedyjr@yahoo.com</a>
+								<a href="#">darkzero_omega_coding@yahoo.com</a>
 							</li>
 							<!--<li><i class="icon-globe"></i><a href="#">www.yoursite.com</a></li>-->
 						</ul>
@@ -233,7 +233,8 @@
 
 
 				<div class="col-md-12 fh5co-copyright text-center">
-					<p>&copy; 2018 T.J. Kennedy Jr. All Rights Reserved.</p>
+					<p>Made by DarkZero_Omega Coding<img src="assets/images/logos/darkzero_omega_logo_v1.png" class="dzo_logo"
+					alt="darkzero_omega coding logo"></p>
 				</div>
 			</div>
 		</footer>
