--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>T.J. Kennedy Jr &mdash; HomePage</title>
+	<title>DarkZero Omega Coding &mdash; HomePage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
@@ -64,7 +64,7 @@
 			<div class="container">
 				<div class="header-inner">
 					<h1>
-						<a href="index.html">T.J. Kennedy Jr</a>
+						<a href="index.html">DarkZero Omega Coding</a>
 					</h1>
 					<nav role="navigation">
 						<ul>
@@ -103,7 +103,7 @@
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 								<div class="slider-text-inner">
-									<h2>T.J. Kennedy Jr Full Stack Web Designer</h2>
+									<h2>DarkZero_Omega Front End Web Designer</h2>
 									<!--<p>
 										<a href="#" class="btn btn-primary btn-lg">Get started</a>
 									</p>
@@ -277,7 +277,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 animate-box">
+					<!--<div class="col-md-4 animate-box">
 						<a href="https://darkzero-omega2003.github.io/memoryREACTion" class="item-grid text-center">
 							<div class="image" style="background-image: url(images/sfWallpaper.jpg)"></div>
 							<div class="v-align">
@@ -287,7 +287,7 @@
 								</div>
 							</div>
 						</a>
-					</div>
+					</div>-->
 					<div class="col-md-12 text-center animate-box">
 						<p>
 							<a href="#" class="btn btn-primary with-arrow">View More Projects
