added new profile pic

--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 							</p>-->
 					</div>
 					<div class="col-md-4 fh5co-staff text-center animate-box">
-						<img src="images/comicon_Zero_1.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
+						<img src="images/profile_05.jpg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Terrance J. Kennedy Jr</h3>
 						<h4>Co-Founder, CEO</h4>
 						<p>Hi! My name is T.J. Kennedy Jr. and I'm a fledgling coder from Cleveland, OH. I've been interested in web design and
@@ -148,7 +148,7 @@
 							<!--<li><a href="#"><i class="icon-google"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
 							<li>
-								<a href="https://twitter.com/TJKennedyJr">
+								<a href="https://twitter.com/DarkZeroCoding">
 									<i class="icon-twitter"></i>
 								</a>
 							</li>
